<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NWS Weather Alerts Widget</string>
    <string name="app_icon_content_description">App Icon</string>
    <string name="about_version">Version %1$s (Build %2$d)</string>
    <string name="action_about">About This App</string>
    <string name="action_demo">Demo all alert types</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Show Debug Window</string>
    <string name="activity_detail">Alert Detail</string>
    <string name="demo_header">This screen displays a list of every alert type the NWS says
         they can possibly send, as a demo of what that alert will look like when displayed.
         This is mainly to make it easy to tell which items are still missing appropriate
         icons or background colors.  The NWS Logo on a gray background is the default used
         if nothing else has been set. Please visit
         https://github.com/justdave/nwsweatheralertswidget/issues to suggest icons or colors.</string>
    <string name="icon">Icon</string>
    <string name="ok">OK</string>
    <string name="alert_title">Widget Loading</string>
    <string name="alert_empty">There are no alerts at this time for this location</string>
    <string name="alert_summary">Please wait&#8230;</string>
    <string name="widget_title">Current Active NWS Alerts</string>
    <string name="choose_area">Choose State or Area</string>
    <string name="choose_zone">Choose County or Zone</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_semitransparent">Semitransparent</string>
    <string name="theme_system">Follow System</string>
    <string name="detail_retrieval">Retreiving alert detail&#8230;</string>
    <string name="detail_target">Target Area:</string>
    <string name="detail_expires">Expires:</string>
    <string name="detail_description">Alert</string>
    <string name="detail_instructions">Instructions</string>
    <string name="detail_action_showxml">Show XML</string>
    <string name="detail_action_hidexml">Hide XML</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="loading">Loading…</string>
    <string name="save">Save</string>
    <string name="app_usage_instructions">This app provides a home screen widget. To use it, please long-press on your home screen, choose the \"Widgets\" option, and select the NWS Weather Alerts Widget from the list.</string>
    <string name="detail_unparseable_date">(unparseable date)</string>
    <string name="detail_no_expiration">No expiration date.</string>
    <string name="demo_all_alerts">Demo All Alert Types</string>
    <string name="submit">Submit</string>
    <string name="debug_display_text">Text</string>
    <string name="debug_display_json">JSON</string>
    <string name="debug_display_widget">Widget</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="notification_why_title">Why is there a persistent notification?</string>
    <string name="notification_why_body">Modern Android versions will stop background services that are not actively in use. The persistent notification tells the OS that the app is doing important work and allows it to continue checking for weather alerts in the background so your widgets will stay up to date.</string>
    <string name="notification_instructions_title">Minimizing the notification icon</string>
    <string name="notification_instructions_tiramisu">On Android 13 and later, you can minimize the notification by long-pressing on it, tapping the gear icon, tapping the notification category (NWS Weather Alerts Widget), and enabling the \"Minimize\" option.</string>
    <string name="notification_instructions_android_12">On Android 12, you can minimize the notification by long-pressing on it, tapping on Settings, tapping on the notification category (NWS Weather Alerts Widget), and enabling the \"Minimize\" option.</string>
    <string name="notification_instructions_oreo">On Android 8–11, you can minimize the notification by long-pressing on it, choosing \"All Categories\", tapping on \"NWS Weather Alerts Widget\", selecting \"Importance\", and choosing \"Low\".</string>
    <plurals name="debug_alert_count">
        <item quantity="one">There is currently 1 active alert</item>
        <item quantity="other">There are currently %d active alerts</item>
    </plurals>
    <string name="notification_text">Monitoring for weather alerts…</string>

</resources>