<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/appwidget_area"
        android:text="@string/choose_area" />

    <Spinner
        android:id="@+id/appwidget_area"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:contentDescription="@string/choose_area" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/appwidget_zone"
        android:text="@string/choose_zone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/appwidget_zone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/choose_zone" />

        <ProgressBar
            android:id="@+id/zone_loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/appwidget_theme"
        android:text="@string/choose_theme" />

    <Spinner
        android:id="@+id/appwidget_theme"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:contentDescription="@string/choose_theme" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>