<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventlistitemview"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/icon"
        android:src="@drawable/nws_logo" />

    <TextView
        android:id="@+id/alert_summary"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/icon"
        android:ellipsize="marquee"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:singleLine="false"
        android:text="@string/alert_summary"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/alert_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/alert_summary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/alert_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>