<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"
    android:background="@drawable/widget_frame"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semigray"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/widget_title"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/widget_parsed_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp" />

    <TextView
        android:id="@+id/widget_empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="6dip"
        android:text="@string/alert_empty"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/widget_updated_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semigray"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="@string/loading"
        android:textColor="@color/white" />

</LinearLayout>
